compiler/tests/ar/errors/pure_impure_call.salam
// لغة: العربية
// توقع: E012
دالة طابع(قیمة: صحیح): صحیح:
    اطبع قیمة
    أرجع قیمة
نهاية

نقي دالة ضعف(قیمة: صحیح): صحیح:
    أرجع طابع(قیمة) * 2
نهاية

دالة الرئیسیة:
    اطبع ضعف(3)
نهاية
